test: StoryControllerTest 가 Mock을 쓰지 않도록 개선